fix: tweak spacing of top item
If the padding is reduced for this item, then the height is shorter
and the arrow gets displayed a little closer to the seperator line.
This looks a bit off, so instead, use a negative margin to raise up
the first item.

--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -6,8 +6,6 @@
   padding: 0;
   margin: 0;
   display: grid;
-  grid-column-gap: govuk-spacing(6); // Use deprecated grid-column-gap for Grade C browser support
-  column-gap: govuk-spacing(6);
  }
 
 .app-cards__list--one-column {
@@ -16,7 +14,7 @@
       border-top: 0;
 
       .app-cards__list-item-wrapper {
-        padding-top: 0;
+        margin-top: -19px;
       }
     }
   }
@@ -27,7 +25,7 @@
   padding: govuk-spacing(1) 0 govuk-spacing(4) 0;
 
   &:first-child {
-    padding-top: 0;
+    margin-top: -5px;
   }
 }
 
